--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -13,13 +13,21 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                <a asp-action="Index" asp-route-sortString="@ViewBag.SortFirstName">
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                <a asp-action="Index" asp-route-sortString="@ViewBag.SortLastName">
+                    @Html.DisplayNameFor(model => model.LastName)
+                </a>
+                
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EnrollmentDate)
+                <a asp-action="Index" asp-route-sortString="@ViewBag.SortEnrollDate">
+                    @Html.DisplayNameFor(model => model.EnrollmentDate)
+                </a>
+                
             </th>
             <th></th>
         </tr>
