--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -4,11 +4,24 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<form asp-action="Index" method="get" class="form">
+    <div class = "form-row">
+      <div class="form-group col-md-3">
+        <h3>Student Index</h3>
+      </div>
+      <div class="form-group col-md-5">
+      </div>
+      <div class="form-group col-md-4">         
+        <input type="text" placeholder="Search" value="@ViewBag.SearchString" name="searchString"/>
+        <input type="submit" value="Search" class="btn btn-primary btn-sm" />
+      </div>
+    </div>     
+</form>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">New Student</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
